# time-series-utilities

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
notebooks/: dc_removal_methods_comparison.ipynb  package_demonstration.ipynb
src/series_utilities/: __init__.py
src/series_utilities/core/: __init__.py  dc_removal.py  trigger_detection.py
src/series_utilities/utils/: __init__.py  input_validation.py
tests/: __init__.py
tests/core/: test_dc_removal.py  test_trigger_detection.py
tests/utils/: test_input_validation.py
